--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,235 @@
-<center>
-<img src="new.png" width="100%"/>
-<br/>
-<img src="ceu_codecamp.jpg"/>
-</center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body and Font Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        h1, h2 {
+            color: #2c3e50;
+        }
+
+        a {
+            text-decoration: none;
+            color: #3498db;
+        }
+
+        /* Container and Layout */
+        .container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        header {
+            text-align: center;
+            padding: 2em 0;
+            background-color: #3498db;
+            color: white;
+        }
+
+        header h1 {
+            font-size: 3rem;
+            margin-bottom: 0.5em;
+        }
+
+        header p {
+            font-size: 1.2rem;
+        }
+
+        section {
+            padding: 3em 0;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 2em;
+        }
+
+        .grid img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        /* About Section */
+        .about {
+            background-color: #ecf0f1;
+            padding: 2em 0;
+            text-align: center;
+        }
+
+        .about h2 {
+            margin-bottom: 1em;
+        }
+
+        .about p {
+            font-size: 1.1rem;
+            color: #7f8c8d;
+        }
+
+        /* Projects Section */
+        .projects {
+            padding: 2em 0;
+        }
+
+        .projects h2 {
+            text-align: center;
+            margin-bottom: 2em;
+        }
+
+        .project-card {
+            background-color: white;
+            padding: 1.5em;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .project-card h3 {
+            margin-bottom: 1em;
+        }
+
+        .project-card p {
+            font-size: 1rem;
+            color: #7f8c8d;
+            margin-bottom: 1.5em;
+        }
+
+        .project-card a {
+            background-color: #3498db;
+            padding: 0.8em 2em;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .project-card a:hover {
+            background-color: #2980b9;
+        }
+
+        /* Contact Section */
+        .contact {
+            background-color: #2c3e50;
+            color: white;
+            padding: 3em 0;
+        }
+
+        .contact h2 {
+            text-align: center;
+            margin-bottom: 1.5em;
+        }
+
+        .contact form {
+            max-width: 600px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+        }
+
+        .contact input, .contact textarea {
+            padding: 1em;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            font-size: 1rem;
+        }
+
+        .contact button {
+            background-color: #3498db;
+            color: white;
+            padding: 1em;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact button:hover {
+            background-color: #2980b9;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1.5em 0;
+            background-color: #2c3e50;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <div class="container">
+            <h1>Charles Jefferson C. Alot</h1>
+            <p>Student at STI College Balagtas</p>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Hello! I'm <u><strong>Charles Jefferson C. Alot</strong></u>, a passionate Full-Stack Web Developer. I specialize in developing MERN Applications and have experience working with my very own Capstone Project titled <strong>"Web-Based Operations Management for Balagtas Public Market"</strong>. My goal is to create impactful solutions and grow through continuous learning.</p>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="grid">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <img src="project1.jpg" alt="Project 1">
+                    <h3>Project 1</h3>
+                    <p>A short description of my project goes here. It could be a website, app, or any other project I've worked on.</p>
+                    <a href="#">View Project</a>
+                </div>
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <img src="project2.jpg" alt="Project 2">
+                    <h3>Project 2</h3>
+                    <p>A short description of my project goes here. It could be a website, app, or any other project I've worked on.</p>
+                    <a href="#">View Project</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form action="#" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Charles Jefferson Alot. All Rights Reserved.</p>
+    </footer>
+
+</body>
+</html>
